# gstreamer-iotedge-rs

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.amd64  Dockerfile.arm32v7  Dockerfile.arm64v8  Dockerfile.rust  LICENSE  README.md  run.sh
src/: iot.rs  main.rs  media.rs  plugins.rs  rtsp.rs  settings.rs  webrtc.rs
wwwroot/: hls.html  webrtc.html
