[package]
name = "gstreamer-iotedge-rs"
version = "0.4.0"
authors = ["krishndu"]
edition = "2021"
description = "Azure IOT Edge module to run a gStreamer pipeline"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log="0.4.26"
tokio= { version = "1.44.1", features = ["full"] }
futures = "0.3.31"
serde = "1.0.219"
serde_json = "1.0.140"
serde_derive = "1.0.219"
env_logger = "0.11.7"
config = "0.15.11"

azure-iot-rs = "0.6.1"

warp = { version = "0.4.2", features = ["websocket", "server"] }

failure = "0.1.8"
once_cell = "1.21.0"
shellexpand = "3.1.0"
anyhow = "1.0.97"
ctrlc = "3.4.5"
gstreamer = { version = "0.24.3", features = ["v1_24"] }
gstreamer-sdp = { version = "0.24.2", features = ["v1_24"] }
gstreamer-rtsp = { version = "0.24.2", features = ["v1_24"] }
gstreamer-rtsp-server = {  version = "0.24.2", features = ["v1_24"] }
gstreamer-webrtc = { version = "0.24.2", features = ["v1_24"] }
